fix GitHubClientTest