@@ -9,14 +9,6 @@ import java.nio.file.Paths;
 public abstract class AbstractClientTest {
     @SneakyThrows
     public String jsonToString(String filePath) {
-        try {
-            Path path = Paths.get(filePath);
-            if (!Files.exists(path)) {
-                throw new IllegalArgumentException("File not found: " + filePath);
-            }
-            return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
-        } catch (Exception e) {
-            throw new RuntimeException("Failed to read JSON file: " + filePath, e);
-        }
+        return Files.readString(Paths.get(filePath));
     }
 }
